// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyLogo renders a currency logo with network logo 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "height": 40,
      "justifyContent": "center",
      "width": 40,
    }
  }
  testID="token-logo"
>
  <View
    style={
      {
        "flexDirection": "column",
      }
    }
    testID="img-token-image"
  >
    <img
      height={40}
      onError={[Function]}
      src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
      style={
        {
          "aspectRatio": undefined,
          "backgroundColor": "rgba(34,34,34,0.05)",
          "borderRadius": 20,
          "objectFit": "contain",
        }
      }
      width={40}
    />
  </View>
  <View
    style={
      {
        "bottom": -2,
        "flexDirection": "column",
        "position": "absolute",
        "right": -3,
      }
    }
  >
    <View
      style={
        {
          "borderBottomColor": "#FFFFFF",
          "borderBottomLeftRadius": 6.8999999999999995,
          "borderBottomRightRadius": 6.8999999999999995,
          "borderBottomWidth": 1.5,
          "borderLeftColor": "#FFFFFF",
          "borderLeftWidth": 1.5,
          "borderRightColor": "#FFFFFF",
          "borderRightWidth": 1.5,
          "borderStyle": "solid",
          "borderTopColor": "#FFFFFF",
          "borderTopLeftRadius": 6.8999999999999995,
          "borderTopRightRadius": 6.8999999999999995,
          "borderTopWidth": 1.5,
          "flexDirection": "column",
          "overflow": "hidden",
        }
      }
      testID="network-logo"
    >
      <div
        className="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
        dir={null}
        style={
          {
            "height": "20px",
            "width": "20px",
          }
        }
      >
        <div
          className="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
          dir={null}
          style={
            {
              "backgroundImage": "url("mock-asset-ARBITRUM_LOGO.png")",
            }
          }
          suppressHydrationWarning={true}
        />
        <img
          alt=""
          className="css-accessibilityImage-9pa8cd"
          draggable={false}
          src="mock-asset-ARBITRUM_LOGO.png"
        />
      </div>
    </View>
  </View>
</View>
`;

exports[`CurrencyLogo renders without error 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "height": 40,
      "justifyContent": "center",
      "width": 40,
    }
  }
  testID="token-logo"
>
  <View
    style={
      {
        "flexDirection": "column",
      }
    }
    testID="img-token-image"
  >
    <img
      height={40}
      onError={[Function]}
      src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984/logo.png"
      style={
        {
          "aspectRatio": undefined,
          "backgroundColor": "rgba(34,34,34,0.05)",
          "borderRadius": 20,
          "objectFit": "contain",
        }
      }
      width={40}
    />
  </View>
</View>
`;
